{
  "version": 4,
  "terraform_version": "1.7.2",
  "serial": 118,
  "lineage": "6e15e01a-bb15-57e3-2a0c-8e4245b4181c",
  "resources": [
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:377241132445:internet-gateway/igw-0e7454b441c139860",
            "id": "igw-0e7454b441c139860",
            "owner_id": "377241132445",
            "tags": {
              "Name": "igw-tf"
            },
            "tags_all": {
              "Name": "igw-tf"
            },
            "vpc_id": "vpc-019026ce8d482dd42"
          },
          "dependencies": [
            "module.VPC.aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:377241132445:route-table/rtb-0432bd9fa77370d02",
            "id": "rtb-0432bd9fa77370d02",
            "owner_id": "377241132445",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e7454b441c139860",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT-Public"
            },
            "tags_all": {
              "Name": "RT-Public"
            },
            "timeouts": null,
            "vpc_id": "vpc-019026ce8d482dd42"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_internet_gateway.igw-tf",
            "module.VPC.aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-SN-RT-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0725d3e05313669d0",
            "route_table_id": "rtb-0432bd9fa77370d02",
            "subnet_id": "subnet-0ca6579992241459e"
          },
          "dependencies": [
            "module.VPC.aws_internet_gateway.igw-tf",
            "module.VPC.aws_route_table.public-RT",
            "module.VPC.aws_subnet.public_subnet_a",
            "module.VPC.aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-SN-RT-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fdbe84c629a5a09d",
            "route_table_id": "rtb-0432bd9fa77370d02",
            "subnet_id": "subnet-0a2c8acc4e48708fe"
          },
          "dependencies": [
            "module.VPC.aws_internet_gateway.igw-tf",
            "module.VPC.aws_route_table.public-RT",
            "module.VPC.aws_subnet.public_subnet_b",
            "module.VPC.aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-SN-RT-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cbae7143deaae3e4",
            "route_table_id": "rtb-0432bd9fa77370d02",
            "subnet_id": "subnet-0df48f1382f36255d"
          },
          "dependencies": [
            "module.VPC.aws_internet_gateway.igw-tf",
            "module.VPC.aws_route_table.public-RT",
            "module.VPC.aws_subnet.public_subnet_c",
            "module.VPC.aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-SN-RT-d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06512556f63fc484f",
            "route_table_id": "rtb-0432bd9fa77370d02",
            "subnet_id": "subnet-0076f0113bf6f692f"
          },
          "dependencies": [
            "module.VPC.aws_internet_gateway.igw-tf",
            "module.VPC.aws_route_table.public-RT",
            "module.VPC.aws_subnet.public_subnet_d",
            "module.VPC.aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:377241132445:subnet/subnet-0ca6579992241459e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ca6579992241459e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "377241132445",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SN-Public-A"
            },
            "tags_all": {
              "Name": "SN-Public-A"
            },
            "vpc_id": "vpc-019026ce8d482dd42"
          },
          "dependencies": [
            "module.VPC.aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:377241132445:subnet/subnet-0a2c8acc4e48708fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.16.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a2c8acc4e48708fe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "377241132445",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SN-Public-B"
            },
            "tags_all": {
              "Name": "SN-Public-B"
            },
            "vpc_id": "vpc-019026ce8d482dd42"
          },
          "dependencies": [
            "module.VPC.aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:377241132445:subnet/subnet-0df48f1382f36255d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.32.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0df48f1382f36255d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "377241132445",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SN-Public-C"
            },
            "tags_all": {
              "Name": "SN-Public-C"
            },
            "vpc_id": "vpc-019026ce8d482dd42"
          },
          "dependencies": [
            "module.VPC.aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:377241132445:subnet/subnet-0076f0113bf6f692f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.48.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0076f0113bf6f692f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "377241132445",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SN-Public-D"
            },
            "tags_all": {
              "Name": "SN-Public-D"
            },
            "vpc_id": "vpc-019026ce8d482dd42"
          },
          "dependencies": [
            "module.VPC.aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:377241132445:vpc/vpc-019026ce8d482dd42",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-049c4c8e0c122bf49",
            "default_route_table_id": "rtb-0be8d3031b2f83c64",
            "default_security_group_id": "sg-0f0ab327812c67e00",
            "dhcp_options_id": "dopt-09d13f1c407da2615",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-019026ce8d482dd42",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0be8d3031b2f83c64",
            "owner_id": "377241132445",
            "tags": {
              "Name": "Vpc-lab-2"
            },
            "tags_all": {
              "Name": "Vpc-lab-2"
            }
          }
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0277155c3f0ab2930",
            "arn": "arn:aws:ec2:us-east-1:377241132445:instance/i-0d237c2350859da33",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d237c2350859da33",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Syst35144-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ce4c88e199eae82f",
            "private_dns": "ip-192-168-0-142.ec2.internal",
            "private_ip": "192.168.0.142",
            "public_dns": "ec2-100-26-48-47.compute-1.amazonaws.com",
            "public_ip": "100.26.48.47",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00ea58e58ebc5e442",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-028b7a177b9a66ad6"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ca6579992241459e",
            "tags": {
              "Name": "Instance-Subnet-a"
            },
            "tags_all": {
              "Name": "Instance-Subnet-a"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-028b7a177b9a66ad6"
            ]
          },
          "dependencies": [
            "module.VPC.aws_subnet.public_subnet_a",
            "module.VPC.aws_subnet.public_subnet_b",
            "module.VPC.aws_subnet.public_subnet_c",
            "module.VPC.aws_subnet.public_subnet_d",
            "module.VPC.aws_vpc.vpc-tf",
            "module.security-group.aws_security_group.sg-lab-2"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0277155c3f0ab2930",
            "arn": "arn:aws:ec2:us-east-1:377241132445:instance/i-00e0cb37d98a0da72",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00e0cb37d98a0da72",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Syst35144-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a100c7353c3c1d66",
            "private_dns": "ip-192-168-16-128.ec2.internal",
            "private_ip": "192.168.16.128",
            "public_dns": "ec2-3-81-169-159.compute-1.amazonaws.com",
            "public_ip": "3.81.169.159",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0de854a57681fecf2",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-028b7a177b9a66ad6"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a2c8acc4e48708fe",
            "tags": {
              "Name": "Instance-Subnet-b"
            },
            "tags_all": {
              "Name": "Instance-Subnet-b"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-028b7a177b9a66ad6"
            ]
          },
          "dependencies": [
            "module.VPC.aws_subnet.public_subnet_a",
            "module.VPC.aws_subnet.public_subnet_b",
            "module.VPC.aws_subnet.public_subnet_c",
            "module.VPC.aws_subnet.public_subnet_d",
            "module.VPC.aws_vpc.vpc-tf",
            "module.security-group.aws_security_group.sg-lab-2"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0277155c3f0ab2930",
            "arn": "arn:aws:ec2:us-east-1:377241132445:instance/i-064591c5494bce879",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-064591c5494bce879",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Syst35144-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0285481284af329c0",
            "private_dns": "ip-192-168-32-41.ec2.internal",
            "private_ip": "192.168.32.41",
            "public_dns": "ec2-44-202-186-193.compute-1.amazonaws.com",
            "public_ip": "44.202.186.193",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0bf913b7b30915b4f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-028b7a177b9a66ad6"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0df48f1382f36255d",
            "tags": {
              "Name": "Instance-Subnet-c"
            },
            "tags_all": {
              "Name": "Instance-Subnet-c"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-028b7a177b9a66ad6"
            ]
          },
          "dependencies": [
            "module.VPC.aws_subnet.public_subnet_a",
            "module.VPC.aws_subnet.public_subnet_b",
            "module.VPC.aws_subnet.public_subnet_c",
            "module.VPC.aws_subnet.public_subnet_d",
            "module.VPC.aws_vpc.vpc-tf",
            "module.security-group.aws_security_group.sg-lab-2"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance-d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0277155c3f0ab2930",
            "arn": "arn:aws:ec2:us-east-1:377241132445:instance/i-0a3a97bbfca1253eb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a3a97bbfca1253eb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Syst35144-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-027668059ec7efbff",
            "private_dns": "ip-192-168-48-152.ec2.internal",
            "private_ip": "192.168.48.152",
            "public_dns": "ec2-54-205-34-17.compute-1.amazonaws.com",
            "public_ip": "54.205.34.17",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-049403e99e9f7edaf",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-028b7a177b9a66ad6"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0076f0113bf6f692f",
            "tags": {
              "Name": "Instance-Subnet-d"
            },
            "tags_all": {
              "Name": "Instance-Subnet-d"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-028b7a177b9a66ad6"
            ]
          },
          "dependencies": [
            "module.VPC.aws_subnet.public_subnet_a",
            "module.VPC.aws_subnet.public_subnet_b",
            "module.VPC.aws_subnet.public_subnet_c",
            "module.VPC.aws_subnet.public_subnet_d",
            "module.VPC.aws_vpc.vpc-tf",
            "module.security-group.aws_security_group.sg-lab-2"
          ]
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-lab-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:377241132445:security-group/sg-028b7a177b9a66ad6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-028b7a177b9a66ad6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240309163910333100000001",
            "name_prefix": "terraform-",
            "owner_id": "377241132445",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-lab-2"
            },
            "tags_all": {
              "Name": "sg-lab-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-019026ce8d482dd42"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.vpc-tf"
          ]
        }
      ]
    }
  ]
}